--- a/sdcc/Makefile.in
+++ b/sdcc/Makefile.in
@@ -28,6 +28,11 @@ SDCC_AS        += sdas/as6808
 SDCC_LD        += sdcc-ld6808
 endif
 
+ifneq ($(OPT_DISABLE_MC6809), 1)
+SDCC_AS        += sdas/as6809
+SDCC_LD        += sdcc-ld6809
+endif
+
 ifeq ($(OPT_DISABLE_STM8), 0)
 SDCC_AS        += sdas/asstm8
 SDCC_LD        += sdcc-ldstm8
