Add m6809 to SDCC build files

--- a/sdcc/Makefile.common.in
+++ b/sdcc/Makefile.common.in
@@ -62,6 +62,7 @@ OPT_DISABLE_PDK13       = @OPT_DISABLE_PDK13@
 OPT_DISABLE_PDK14       = @OPT_DISABLE_PDK14@
 OPT_DISABLE_PDK15       = @OPT_DISABLE_PDK15@
 OPT_DISABLE_PDK16       = @OPT_DISABLE_PDK16@
+OPT_DISABLE_M6809       = @OPT_DISABLE_M6809@
 
 OPT_ENABLE_DOC          = @OPT_ENABLE_DOC@
 
