--- a/sdcc-extra/emu/Makefile.in
+++ b/sdcc-extra/emu/Makefile.in
@@ -3,6 +3,6 @@ VPATH = @srcdir@
 top_srcdir = @top_srcdir@
 top_builddir = @top_builddir@
 
-SUBDIRS = rrz80 rrgb
+SUBDIRS = rrz80
 
 include $(top_builddir)/Makefile.rules
