TEST: Edit compiler_mc6809.cbp
Add m6809/m6809.h

--- a/sdcc/timsbuild/compiler_mc6809.cbp
+++ b/sdcc/timsbuild/compiler_mc6809.cbp
@@ -296,6 +296,9 @@
 		<Unit filename="../src/m6809/gen.h">
 			<Option target="backend" />
 		</Unit>
+		<Unit filename="../src/m6809/m6809.h">
+			<Option target="backend" />
+		</Unit>
 		<Unit filename="../src/m6809/main.c">
 			<Option compilerVar="CC" />
 			<Option target="backend" />
