--- a/sdcc/timsbuild/compiler_mc6809.cbp
+++ b/sdcc/timsbuild/compiler_mc6809.cbp
@@ -13,11 +13,8 @@
 				<Option type="2" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-O2" />
+					<Add option="-Wno-parentheses" />
 				</Compiler>
-				<Linker>
-					<Add option="-s" />
-				</Linker>
 			</Target>
 			<Target title="frontend">
 				<Option output="bin_mc6809/Release/frontend" prefix_auto="1" extension_auto="1" />
@@ -26,11 +23,8 @@
 				<Option type="2" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-O2" />
+					<Add option="-Wno-parentheses" />
 				</Compiler>
-				<Linker>
-					<Add option="-s" />
-				</Linker>
 			</Target>
 			<Target title="main">
 				<Option output="bin_mc6809/Release/mc6809" prefix_auto="1" extension_auto="1" />
@@ -38,10 +32,9 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-O2" />
+					<Add option="-Wno-parentheses" />
 				</Compiler>
 				<Linker>
-					<Add option="-s" />
 					<Add library="frontend" />
 					<Add library="backend" />
 					<Add directory="$(TARGET_OUTPUT_DIR)" />
@@ -54,7 +47,7 @@
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
-			<Add option="-Wno-parentheses" />
+			<Add option="-ggdb -Og" />
 			<Add option="-D__USE_MINGW_ANSI_STDIO=1" />
 			<Add option="-DOPT_DISABLE_M6809=0" />
 			<Add directory="../src" />
